--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,17 @@ body {
 	background-color: rgba(0, 0, 0, 0.9);
 }
 
-.wrapper {
+.reset-button {
+	margin-bottom: 1rem;
+	display: inline-block;
+}
+
+.random-color {
+	display: inline-block;
+	margin: 2rem;
+}
+
+.box-wrapper {
 	background-color: #000;
 	padding: 1rem;
 	text-align: center;
